// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionComponentView /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "viewerUrl": "test",
                "zoom": false,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "10px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "width": "10px",
                      }
        }
>
        <ExtensionFrame
                className="view"
                extension={
                        Object {
                                "authorName": "test",
                                "channelId": "channelId",
                                "description": "description",
                                "iconUrl": "icon_url",
                                "id": "id",
                                "name": "name",
                                "requestIdentity": false,
                                "sku": "sku",
                                "state": "state",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 3000,
                                    "aspectWidth": 2500,
                                    "viewerUrl": "test",
                                    "zoom": false,
                                  },
                                  "config": Object {
                                    "viewerUrl": "test",
                                  },
                                  "liveConfig": Object {
                                    "viewerUrl": "test",
                                  },
                                  "panel": Object {
                                    "viewerUrl": "test",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          className="view"
          extension={
                    Object {
                              "authorName": "test",
                              "channelId": "channelId",
                              "description": "description",
                              "iconUrl": "icon_url",
                              "id": "id",
                              "name": "name",
                              "requestIdentity": false,
                              "sku": "sku",
                              "state": "state",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 3000,
                                  "aspectWidth": 2500,
                                  "viewerUrl": "test",
                                  "zoom": false,
                                },
                                "config": Object {
                                  "viewerUrl": "test",
                                },
                                "liveConfig": Object {
                                  "viewerUrl": "test",
                                },
                                "panel": Object {
                                  "viewerUrl": "test",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "10px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "width": "10px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "view",
          "extension": Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 3000,
                "aspectWidth": 2500,
                "viewerUrl": "test",
                "zoom": false,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "10px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "width": "10px",
                            }
          }
>
          <ExtensionFrame
                    className="view"
                    extension={
                              Object {
                                        "authorName": "test",
                                        "channelId": "channelId",
                                        "description": "description",
                                        "iconUrl": "icon_url",
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentity": false,
                                        "sku": "sku",
                                        "state": "state",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 3000,
                                            "aspectWidth": 2500,
                                            "viewerUrl": "test",
                                            "zoom": false,
                                          },
                                          "config": Object {
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            className="view"
            extension={
                        Object {
                                    "authorName": "test",
                                    "channelId": "channelId",
                                    "description": "description",
                                    "iconUrl": "icon_url",
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentity": false,
                                    "sku": "sku",
                                    "state": "state",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 3000,
                                        "aspectWidth": 2500,
                                        "viewerUrl": "test",
                                        "zoom": false,
                                      },
                                      "config": Object {
                                        "viewerUrl": "test",
                                      },
                                      "liveConfig": Object {
                                        "viewerUrl": "test",
                                      },
                                      "panel": Object {
                                        "viewerUrl": "test",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "10px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "width": "10px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "view",
            "extension": Object {
              "authorName": "test",
              "channelId": "channelId",
              "description": "description",
              "iconUrl": "icon_url",
              "id": "id",
              "name": "name",
              "requestIdentity": false,
              "sku": "sku",
              "state": "state",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 3000,
                  "aspectWidth": 2500,
                  "viewerUrl": "test",
                  "zoom": false,
                },
                "config": Object {
                  "viewerUrl": "test",
                },
                "liveConfig": Object {
                  "viewerUrl": "test",
                },
                "panel": Object {
                  "viewerUrl": "test",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionComponentView /> renders correctly when zoom is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionComponentView
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "zoom": true,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "height": "300px",
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          }
    }
    frameSize={
        Object {
            "height": 600,
            "width": 800,
          }
    }
    id="1"
    position={
        Object {
            "x": 10,
            "y": 10,
          }
    }
    role="Broadcaster"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        style={
                Object {
                        "border": "1px solid #7D55C7",
                        "height": "0.009765625px",
                        "left": "20px",
                        "position": "absolute",
                        "top": "20px",
                        "transform": "scale(1024)",
                        "transformOrigin": "0 0",
                        "width": "0.009765625px",
                      }
        }
>
        <ExtensionFrame
                className="view"
                extension={
                        Object {
                                "authorName": "test",
                                "channelId": "channelId",
                                "description": "description",
                                "iconUrl": "icon_url",
                                "id": "id",
                                "name": "name",
                                "requestIdentity": false,
                                "sku": "sku",
                                "state": "state",
                                "summary": "summary",
                                "token": "token",
                                "vendorCode": "vendorCode",
                                "version": "0.1",
                                "views": Object {
                                  "component": Object {
                                    "aspectHeight": 2000,
                                    "aspectWidth": 3000,
                                    "zoom": true,
                                  },
                                  "config": Object {
                                    "viewerUrl": "test",
                                  },
                                  "liveConfig": Object {
                                    "viewerUrl": "test",
                                  },
                                  "panel": Object {
                                    "height": "300px",
                                    "viewerUrl": "test",
                                  },
                                },
                                "whitelistedConfigUrls": Array [
                                  "foo",
                                ],
                                "whitelistedPanelUrls": Array [
                                  "bar",
                                ],
                              }
                }
                frameId="frameid-1"
                mode="viewer"
                type="component"
        />
</div>,
      "className": "view component-view",
      "style": Object {
        "height": "600px",
        "width": "800px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ExtensionFrame
          className="view"
          extension={
                    Object {
                              "authorName": "test",
                              "channelId": "channelId",
                              "description": "description",
                              "iconUrl": "icon_url",
                              "id": "id",
                              "name": "name",
                              "requestIdentity": false,
                              "sku": "sku",
                              "state": "state",
                              "summary": "summary",
                              "token": "token",
                              "vendorCode": "vendorCode",
                              "version": "0.1",
                              "views": Object {
                                "component": Object {
                                  "aspectHeight": 2000,
                                  "aspectWidth": 3000,
                                  "zoom": true,
                                },
                                "config": Object {
                                  "viewerUrl": "test",
                                },
                                "liveConfig": Object {
                                  "viewerUrl": "test",
                                },
                                "panel": Object {
                                  "height": "300px",
                                  "viewerUrl": "test",
                                },
                              },
                              "whitelistedConfigUrls": Array [
                                "foo",
                              ],
                              "whitelistedPanelUrls": Array [
                                "bar",
                              ],
                            }
          }
          frameId="frameid-1"
          mode="viewer"
          type="component"
/>,
        "style": Object {
          "border": "1px solid #7D55C7",
          "height": "0.009765625px",
          "left": "20px",
          "position": "absolute",
          "top": "20px",
          "transform": "scale(1024)",
          "transformOrigin": "0 0",
          "width": "0.009765625px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "view",
          "extension": Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "0.1",
            "views": Object {
              "component": Object {
                "aspectHeight": 2000,
                "aspectWidth": 3000,
                "zoom": true,
              },
              "config": Object {
                "viewerUrl": "test",
              },
              "liveConfig": Object {
                "viewerUrl": "test",
              },
              "panel": Object {
                "height": "300px",
                "viewerUrl": "test",
              },
            },
            "whitelistedConfigUrls": Array [
              "foo",
            ],
            "whitelistedPanelUrls": Array [
              "bar",
            ],
          },
          "frameId": "frameid-1",
          "mode": "viewer",
          "type": "component",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          style={
                    Object {
                              "border": "1px solid #7D55C7",
                              "height": "0.009765625px",
                              "left": "20px",
                              "position": "absolute",
                              "top": "20px",
                              "transform": "scale(1024)",
                              "transformOrigin": "0 0",
                              "width": "0.009765625px",
                            }
          }
>
          <ExtensionFrame
                    className="view"
                    extension={
                              Object {
                                        "authorName": "test",
                                        "channelId": "channelId",
                                        "description": "description",
                                        "iconUrl": "icon_url",
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentity": false,
                                        "sku": "sku",
                                        "state": "state",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 2000,
                                            "aspectWidth": 3000,
                                            "zoom": true,
                                          },
                                          "config": Object {
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "height": "300px",
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [
                                          "foo",
                                        ],
                                        "whitelistedPanelUrls": Array [
                                          "bar",
                                        ],
                                      }
                    }
                    frameId="frameid-1"
                    mode="viewer"
                    type="component"
          />
</div>,
        "className": "view component-view",
        "style": Object {
          "height": "600px",
          "width": "800px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            className="view"
            extension={
                        Object {
                                    "authorName": "test",
                                    "channelId": "channelId",
                                    "description": "description",
                                    "iconUrl": "icon_url",
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentity": false,
                                    "sku": "sku",
                                    "state": "state",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "0.1",
                                    "views": Object {
                                      "component": Object {
                                        "aspectHeight": 2000,
                                        "aspectWidth": 3000,
                                        "zoom": true,
                                      },
                                      "config": Object {
                                        "viewerUrl": "test",
                                      },
                                      "liveConfig": Object {
                                        "viewerUrl": "test",
                                      },
                                      "panel": Object {
                                        "height": "300px",
                                        "viewerUrl": "test",
                                      },
                                    },
                                    "whitelistedConfigUrls": Array [
                                      "foo",
                                    ],
                                    "whitelistedPanelUrls": Array [
                                      "bar",
                                    ],
                                  }
            }
            frameId="frameid-1"
            mode="viewer"
            type="component"
/>,
          "style": Object {
            "border": "1px solid #7D55C7",
            "height": "0.009765625px",
            "left": "20px",
            "position": "absolute",
            "top": "20px",
            "transform": "scale(1024)",
            "transformOrigin": "0 0",
            "width": "0.009765625px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "view",
            "extension": Object {
              "authorName": "test",
              "channelId": "channelId",
              "description": "description",
              "iconUrl": "icon_url",
              "id": "id",
              "name": "name",
              "requestIdentity": false,
              "sku": "sku",
              "state": "state",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "0.1",
              "views": Object {
                "component": Object {
                  "aspectHeight": 2000,
                  "aspectWidth": 3000,
                  "zoom": true,
                },
                "config": Object {
                  "viewerUrl": "test",
                },
                "liveConfig": Object {
                  "viewerUrl": "test",
                },
                "panel": Object {
                  "height": "300px",
                  "viewerUrl": "test",
                },
              },
              "whitelistedConfigUrls": Array [
                "foo",
              ],
              "whitelistedPanelUrls": Array [
                "bar",
              ],
            },
            "frameId": "frameid-1",
            "mode": "viewer",
            "type": "component",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
